# MTC-smart

./: .gitignore  Dockerfile.server  README.md  pyproject.toml  requirements-server.txt
analysis/: REPORT.md  hierarchical_eval.py  typology_grouping.py
colab/: s003-yolo26m-960-colab.ipynb  s004-yolo26l-960-colab.ipynb
configs/: class_map.json  kaggle_inference.json  openai_fallback.json  project.json  search_space.json  server.json  tracking_postprocess.json  typology_rules.json
docs/: PIPELINE.md  SERVER_API.md
eval/: fp_simulation.py  metric.py
geo_model/: README.md  build_dataset.py  predict.py  train.py
geo_model/artifacts/: metrics.json  model_ratio.joblib
kaggle_obb/: README.md  kernel-metadata.json  make_notebook.py  mtc_obb_pipeline.ipynb  train_obb_kaggle.py
notebooks/: README.md  api_remote_kaggle_demo.ipynb
obb/: build_roi.py  build_roi_grid.py  convert_to_yolo_obb.py  investigate_roi.py  label_sample.py  roi_grid.npz  roi_grid_meta.json  roi_polygons.json  validate_angle.py  validate_angle_zoom.py
obb/roi_out/: roi_stats.csv
pipeline/: PENDIENTES.md  PIPELINE_LOG.md  _log.py  backfill_log.py  correo_organizadores.md  run_log.jsonl
src/dvka/: __init__.py  cli.py  colab_agent.py  config.py  data_agent.py  director.py  ensemble.py  evolve_agent.py  experiments.py  geometry_calibration.py  io.py  kaggle_agent.py  kaggle_remote.py  kaggle_worker_template.py  openai_fallback.py  paths.py  review_agent.py  server.py  tracking_postprocess.py  typology_agent.py  typology_eval.py  video_pipeline.py
